--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://howard-liu.github.io/blog",
+  "homepage": "https://howard-liu.github.io/blog",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
